Fixed boxes functionality on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -381,6 +381,22 @@ img.bg {
     height:100%;
 }
 
+.toggle .boxes {
+	opacity: 1;
+}
+
+.toggle .Background h1 {
+	opacity: 0;
+	transform: translateY(-50px) scale(1.2);
+}
+
+.toggle .foreground {
+	opacity: 1;
+    bottom: 0;
+    width:100%;
+    height:100%;
+}
+
 #wood {
 	background-image: url("../images/Sadpass/wood.jpg");
 	background-size: cover;
